tests/failing/test_ternary.js
let age = 20;
let status = age >= 18 ? "Adult" : "Minor";
console.log("Status is: " + status);
